asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__quit__confirm_quit_prompt.snap
---
source: src/gitui/tests/quit.rs
expression: ctx.redact_buffer()
---
▌No branch                                                                      |
                                                                                |
 Recent commits                                                                 |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Really quit? (y or n) ›                                                       |
styles_hash: d282fc509f9f2617
