asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__quit__quit_from_menu.snap
---
source: src/gitui/tests/quit.rs
expression: ctx.redact_buffer()
---
▌No branch                                                                      |
                                                                                |
 Recent commits                                                                 |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: bc670d3bb6a7cf9a
